# cobblers

./: .gitignore  CLAUDE.md  PLAN.md  README.md  start.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  events.py  main.py
backend/app/adapters/: base.py  claude.py  deepseek.py  gemini.py  openai_adapter.py  registry.py
backend/app/models/: api.py  debate.py
backend/app/orchestrator/: brief.py  convergence.py  engine.py
backend/app/prompts/: brief_generation.py  convergence.py  follow_up.py  round1.py  round_n.py
backend/app/routes/: debates.py  ws.py
backend/app/storage/: file_store.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: BriefView.tsx  ConvergenceBar.tsx  DebateView.tsx  ForkControls.tsx  Layout.tsx  ModelConfig.tsx  QuestionInput.tsx  ResponseCard.tsx  RoundTimeline.tsx  RoundView.tsx
frontend/src/hooks/: useDebate.ts  useWebSocket.ts
frontend/src/stores/: debateStore.ts
frontend/src/types/: index.ts
